Fix small screen on safari with overlay setting

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -697,6 +697,7 @@ meter:-moz-meter-sub-sub-optimum::-moz-meter-bar {
   line-height: 1.2;
   color: #ffffff;
   text-align: center;
+  overflow-wrap: anywhere;
 }
 
 .landing-help-card p,
@@ -704,6 +705,7 @@ meter:-moz-meter-sub-sub-optimum::-moz-meter-bar {
   color: #eef5ff;
   line-height: 1.7;
   font-size: 1.12rem;
+  overflow-wrap: anywhere;
 }
 
 .landing-help-card p {
@@ -724,8 +726,8 @@ meter:-moz-meter-sub-sub-optimum::-moz-meter-bar {
   margin-top: 0.45rem;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1100px) {
   .landing-help__grid {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(2, minmax(260px, 1fr));
   }
 }
